trunk/Archive2/9f/a753f248607653/output
main.cpp: In function 'int main()':
main.cpp:8:26:   in constexpr expansion of 'f()'
main.cpp:4:35: error: 'printf(((const char*)"a side effect!\012"))' is not a constant expression
   return printf("a side effect!\n");
                                   ^
main.cpp:9:14: error: size of array 'a' is not an integral constant-expression
   char a[size];
              ^
